feat: Use API for export CLI
fix #6
